--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -3,7 +3,7 @@
 {% block content %}
     <main>
         <div>
-            <h1>My events</h1>
+            <h1>Home page</h1>
             {% comment %} <p><a href="{% url 'create_event' %}">Create a new event</a></p> {% endcomment %}
             {% if event_list|length == 0 %}
                 <p>You are not assigned to any events</p>
