About, Packages and Contact Us Page completed

--- a/events/templates/base.html
+++ b/events/templates/base.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Chic Events</title>
+        <title> {% block title %} {% endblock title %} </title>
     </head>
     <body>
         <header>
@@ -9,9 +9,10 @@
                 <ul>
                     <li><a href="{% url "home" %}">Home</a></li>
                     <li><a href="{% url "about" %}">About</a></li>
-                    <li><a href="{% url "list_services" %}">Services</a></li>
+                    <li><a href="{% url "list_packages" %}">Packages</a></li>
                     <li><a href="{% url "book_now" %}">Book Now</a></li>
                     <li><a href="{% url "contact_us" %}">Contact Us</a></li>
+                    {% comment %} {% if request.user.is_authenticated %} {% endcomment %}
                     {% comment %} <li><a href="{% url "logout" %}">Logout</a></li>
                     <li><a href="{% url "login" %}">Login</a></li>
                     <li><a href="{% url "signup" %}">Signup</a></li> {% endcomment %}
