Book Now page complete

--- a/events/templates/events/book.html
+++ b/events/templates/events/book.html
@@ -1,16 +1,25 @@
 {% extends "base.html" %}
 
-{% block title %}Book with Chic Events{% endblock title %}
+{% block title %}Book Now | Chic Events{% endblock title %}
 
 {% block content %}
     <main>
         <div>
-            <h1>Create a new project</h1>
-            <form action="" method="POST" novalidate>
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Submit</button>
-            </form>
+            <h1>Book Now</h1>
+            {% if submitted %}
+                <p> Your request was submitted successfully. Thank you. </p>
+            {% else %}
+                <form action="" method="POST" novalidate>
+                    <table>
+                        {% csrf_token %}
+                        {{ form.as_table }}
+                            <tr>
+                                <td>%nbsp;</td>
+                                <td><input type="submit" value="Submit"></td>
+                            </tr>
+                    </table>
+                </form>
+            {% endif %}
         </div>
     </main>
 {% endblock content %}
