--- a/events/templates/events/packages.html
+++ b/events/templates/events/packages.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}Chic Packages{% endblock title %}
+{% block title %}Packages | Chic Events {% endblock title %}
 
 {% block content %}
     <main>
