--- a/events/templates/events/about.html
+++ b/events/templates/events/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-{% block title %}About Chic Events{% endblock title %}
+{% block title %}About | Chic Events{% endblock title %}
 
 {% block content %}
     <main>
