--- a/events/templates/events/contact.html
+++ b/events/templates/events/contact.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Contact Chic Events{% endblock title %}
+{% block title %}Contact | Chic Events{% endblock title %}
 
 {% block content %}
     <main>
