--- a/events/templates/events/contact_success.html
+++ b/events/templates/events/contact_success.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Message sent to Chic Events{% endblock title %}
+{% block title %}Message Sent | Chic Events{% endblock title %}
 
 {% block content %}
     <main>
