--- a/events/templates/events/book.html
+++ b/events/templates/events/book.html
@@ -4,22 +4,43 @@
 
 {% block content %}
     <main>
-        <div>
+        <h1>Book Now</h1>
+        {% if submitted %}
+            <p>Your request was submitted successfully. Thank you.</p>
+        {% else %}
+            <div>
+                <form action="" method="post" novalidate>
+                    <table>            
+                        {{ form.as_table }}            
+                            <tr>
+                                <td>&nbsp;</td>
+                                <td><button class="button">Submit</button></td>
+                            </tr>
+                    </table>
+                    {% csrf_token %}
+                </form>        
+        {% endif %}
+            </div>
+{% comment %}             
+            <input type="text" id="name" name="name"
+            <input type="date" name="date" required="" id="id_date"> {% endcomment %}
+
+        {% comment %} <div>
             <h1>Book Now</h1>
             {% if submitted %}
                 <p> Your request was submitted successfully. Thank you. </p>
             {% else %}
                 <form action="" method="POST" novalidate>
                     <table>
-                        {% csrf_token %}
                         {{ form.as_table }}
                             <tr>
                                 <td>%nbsp;</td>
-                                <td><input type="submit" value="Submit"></td>
+                                <td><button>Submit</button></td>
                             </tr>
                     </table>
+                    {% csrf_token %}
                 </form>
             {% endif %}
-        </div>
+        </div> {% endcomment %}
     </main>
 {% endblock content %}
