--- a/events/templates/events/contact.html
+++ b/events/templates/events/contact.html
@@ -14,7 +14,7 @@
                         {% csrf_token %}
                         {{ form.as_table }}
                             <tr>
-                                <td>%nbsp;</td>
+                                <td>&nbsp;</td>
                                 <td><input type="submit" value="Submit"></td>
                             </tr>
                     </table>
