CSS half completed

--- a/events/templates/base.html
+++ b/events/templates/base.html
@@ -1,24 +1,36 @@
+{% load static %}
+
 <!doctype html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title> {% block title %} {% endblock title %} </title>
+        <link href='https://fonts.googleapis.com/css?family=Alex Brush' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Bodoni Moda' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Gilda Display' rel='stylesheet'>
+        <link rel="stylesheet" href="{% static 'css/pretty.css' %}">
     </head>
     <body>
         <header>
             <nav>
-                <ul>
-                    <li><a href="{% url "home" %}">Home</a></li>
-                    <li><a href="{% url "about" %}">About</a></li>
-                    <li><a href="{% url "list_packages" %}">Packages</a></li>
-                    <li><a href="{% url "book_now" %}">Book Now</a></li>
-                    <li><a href="{% url "contact_us" %}">Contact Us</a></li>
-                    {% comment %} {% if request.user.is_authenticated %} {% endcomment %}
-                    {% comment %} <li><a href="{% url "logout" %}">Logout</a></li>
-                    <li><a href="{% url "login" %}">Login</a></li>
-                    <li><a href="{% url "signup" %}">Signup</a></li> {% endcomment %}
-                </ul>
-                <div>
-                    <h1>Chic Events</h1>
+                <div class="bg-img">
+                    <div class="container">
+                        <div class="topnav">
+                            <ul class="nav-links">
+                                <li><a href="{% url "home" %}">Home</a></li>
+                                <li><a href="{% url "about" %}">About</a></li>
+                                <li><a href="{% url "list_packages" %}">Packages</a></li>
+                                <li><a href="{% url "book_now" %}">Book Now</a></li>
+                                <li><a href="{% url "contact_us" %}">Contact Us</a></li>
+                                {% comment %} {% if request.user.is_authenticated %} {% endcomment %}
+                                {% comment %} <li><a href="{% url "logout" %}">Logout</a></li>
+                                <li><a href="{% url "login" %}">Login</a></li>
+                                <li><a href="{% url "signup" %}">Signup</a></li> {% endcomment %}
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </nav>
         </header>
