--- a/events/templates/events/about.html
+++ b/events/templates/events/about.html
@@ -5,10 +5,10 @@
 {% block content %}
     <main>
         <div>
-            <h1>About Us</h1>
+            <h1 class=page-titles>About Us</h1>
         </div>
         <div>
-            <p>
+            <p class=paragraphs>
                 Cupcake ipsum dolor sit amet chupa chups. Cotton candy jelly beans candy topping jelly beans tiramisu sweet macaroon. Cotton candy donut topping oat cake brownie. Topping bear claw tootsie roll jelly-o carrot cake pastry jelly. Tootsie roll caramels lemon drops chupa chups fruitcake I love jelly beans bonbon cotton candy. Cake cheesecake cake bonbon sesame snaps dragée sweet cake. Tart pie oat cake oat cake cake wafer powder jelly.
                 <br><br>
                 I love toffee croissant chocolate soufflé. I love powder lollipop I love croissant. Dragée icing cake dragée croissant pudding pudding. Gingerbread wafer topping dragée bonbon. Wafer cookie fruitcake I love wafer caramels oat cake. Cheesecake cheesecake I love danish sweet cake wafer caramels candy. I love lemon drops dessert lollipop biscuit marzipan. I love cheesecake toffee tart chocolate bar macaroon candy. Bear claw cake lollipop dessert lollipop topping donut donut marzipan.
