--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -5,7 +5,7 @@
 {% block content %}
     <main>
         <div>
-            <h1>Home page</h1>
+            <h1 class=page-titles>Home page</h1>
         </div>
     </main>
 {% endblock content %}
