--- a/events/static/css/pretty.css
+++ b/events/static/css/pretty.css
@@ -52,12 +52,9 @@ button.button {
 button.button:hover {
     background-color: white;
     border-color: #e99bc4;
-    color: #e99bc4;
+    color: black;
   }
-  
-button.button:active {
-    background-color: #c93e91;
-  }
+
 
 table {
     border-collapse: collapse;
@@ -68,10 +65,17 @@ table {
 
 .contact-form > h1{
     text-align: center;
+    font-size: 2.5em;
+}
+
+h1 {
+    margin: 20px 1em;
 }
 
 .page-titles {
     font-family: 'Gilda Display';
+    text-align: center;
+    font-size: 2.5em;
 }
 
 .paragraphs {
@@ -80,7 +84,7 @@ table {
 
 .bg-img {
     /* The image used */
-    background-image: url(https://i.ibb.co/GnYTjYw/Chic-Events-2.png);
+    background-image: url(../images/chic_events.png);
     min-height: 230px;
     margin: 0;
     padding: 0;
@@ -104,7 +108,6 @@ table {
     margin: 0px;
     width: 100%;
     display: inline-block;
-
   }
   
   
@@ -135,3 +138,36 @@ table {
     font-size: 120%;
   }
 
+  /* about us page */
+.about-pic {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    width: 50%;
+    height: auto;
+    float: right;
+}
+
+.picnic {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    width: 50%;
+    height: auto;
+}
+
+.birthday {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    width: 50%;
+    height: auto;
+}
+
+.bach-party {
+    margin: 0;
+    padding: 0;
+    max-width: 100%;
+    width: 50%;
+    height: auto;
+}
