--- a/events/templates/events/about.html
+++ b/events/templates/events/about.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load static %}
 
 {% block title %}About | Chic Events{% endblock title %}
 
@@ -6,6 +7,9 @@
     <main>
         <div>
             <h1 class=page-titles>About Us</h1>
+        </div>
+        <div>
+            <img class="about-pic" src="{% static "images/about3.png" %}" alt="pic of owners">
         </div>
         <div>
             <p class=paragraphs>
