--- a/events/templates/events/book.html
+++ b/events/templates/events/book.html
@@ -7,7 +7,7 @@
         <div class=contact-form>
             <h1>Book Now</h1>
             {% if submitted %}
-                <p>Your request was submitted successfully. Thank you.</p>
+                <p class=success>Your request was submitted successfully. Thank you.</p>
             {% else %}
                 <div>
                     <form action="" method="post" novalidate>
