--- a/events/templates/events/contact.html
+++ b/events/templates/events/contact.html
@@ -7,7 +7,7 @@
         <div class=contact-form>
             <h1>Have a question?</h1>
             {% if submitted %}
-                <p> Your message was submitted successfully. Thank you. </p>
+                <p class=success> Your message was submitted successfully. Thank you. </p>
             {% else %}
                 <form action="" method="POST" novalidate>
                     <table>
