--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+{% load static %}
+
 
 {% block title %}Chic Events{% endblock title %}
 
@@ -6,6 +8,9 @@
     <main>
         <div>
             <h1 class=page-titles>Home page</h1>
+        </div>
+        <div>
+            <img class="home-pic" src="{% static "images/home2.jpg" %}" alt="picnic table">
         </div>
     </main>
 {% endblock content %}
