--- a/events/templates/events/packages.html
+++ b/events/templates/events/packages.html
@@ -5,25 +5,28 @@
 
 {% block content %}
     <main>
-        <div>
-            <h1 class=page-titles>Event Packages</h1>
-            {% comment %} <p><a href="{% url 'create_event' %}">Create a new event</a></p> {% endcomment %}
+        <h1 class=page-titles>Event Packages</h1>
+        <div class=packages>
             {% for event in event_list %}
                 <h2>{{ event.name }}</h3>
+                <div class=packages-pics><img src="{{ event.image }}"></div>
                 <p>{{ event.description }}</p>
+                <p>    </p>
                     <ul>
                         {% for description in event.description_list.all %}
                             <li>{{ description.description_list }}</li>
                         {% endfor %}
                     </ul>
+                <p>    </p>
                 <p><i>{{ event.price }}</i></p>
+                <p>      </p>
             {% endfor %}
         </div>
-        <div>
+        {% comment %} <div>
             <img class="picnic" src="{% static "images/picnic.jpg" %}" alt="chic picnic">
             <img class="birthday" src="{% static "images/birthday.png" %}" alt="birthday party">
             <img class="bach-party" src="{% static "images/bach_party.jpg" %}" alt="bachelorette picnic">
-        </div>
+        </div> {% endcomment %}
     </main>
 {% endblock content %}
 
