updated home page

--- a/events/static/css/pretty.css
+++ b/events/static/css/pretty.css
@@ -142,11 +142,19 @@ h1 {
     font-size: 120%;
   }
 
+  .home {
+    margin: 10px 20px;
+  }
+
+  .nav {
+    margin: 0px 0 40px 0;
+  }
+
   .home-pic {
     margin: auto;
     padding: 0;
     max-width: 100%;
-    width: 50%;
+    width: 70%;
     height: auto;
     float: center;
     display: block;
