--- a/events/templates/events/home.html
+++ b/events/templates/events/home.html
@@ -7,9 +7,9 @@
 {% block content %}
     <main>
         <div>
-            <h1 class=page-titles>Home page</h1>
+            {% comment %} <h1 class=page-titles>Home page</h1> {% endcomment %}
         </div>
-        <div>
+        <div class="home">
             <img class="home-pic" src="{% static "images/home2.jpg" %}" alt="picnic table">
         </div>
     </main>
