--- a/events/templates/base.html
+++ b/events/templates/base.html
@@ -14,7 +14,7 @@
     </head>
     <body>
         <header>
-            <nav>
+            <nav class="nav">
                 <div class="bg-img">
                     <div class="container">
                         <div class="topnav">
