--- a/events/templates/base.html
+++ b/events/templates/base.html
@@ -11,12 +11,13 @@
         <link href='https://fonts.googleapis.com/css?family=Bodoni Moda' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Gilda Display' rel='stylesheet'>
         <link rel="stylesheet" href="{% static 'css/pretty.css' %}">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     </head>
     <body>
         <header>
             <nav class="nav">
                 <div class="bg-img">
-                    <div class="container">
+                    <div class="container-nav">
                         <div class="topnav">
                             <ul class="nav-links">
                                 <li><a href="{% url "home" %}">Home</a></li>
@@ -24,10 +25,6 @@
                                 <li><a href="{% url "list_packages" %}">Packages</a></li>
                                 <li><a href="{% url "book_now" %}">Book Now</a></li>
                                 <li><a href="{% url "contact_us" %}">Contact Us</a></li>
-                                {% comment %} {% if request.user.is_authenticated %} {% endcomment %}
-                                {% comment %} <li><a href="{% url "logout" %}">Logout</a></li>
-                                <li><a href="{% url "login" %}">Login</a></li>
-                                <li><a href="{% url "signup" %}">Signup</a></li> {% endcomment %}
                             </ul>
                         </div>
                     </div>
