--- a/events/templates/events/packages.html
+++ b/events/templates/events/packages.html
@@ -5,28 +5,24 @@
 
 {% block content %}
     <main>
-        <h1 class=page-titles>Event Packages</h1>
-        <div class=packages>
+        <div class="container package">
+            <div class="row package-row"><h1 class=page-titles>Event Packages</h1></div>
             {% for event in event_list %}
-                <h2>{{ event.name }}</h3>
-                <div class=packages-pics><img src="{{ event.image }}"></div>
-                <p>{{ event.description }}</p>
-                <p>    </p>
-                    <ul>
-                        {% for description in event.description_list.all %}
+            <div class="row package-row">
+                    <div class="col-6">
+                    <h2>{{ event.name }}</h3>
+                        <p>{{ event.description }}</p>
+                        <ul>
+                            {% for description in event.description_list.all %}
                             <li>{{ description.description_list }}</li>
-                        {% endfor %}
-                    </ul>
-                <p>    </p>
-                <p><i>{{ event.price }}</i></p>
-                <p>      </p>
-            {% endfor %}
+                            {% endfor %}
+                        </ul>
+                        <p><i>{{ event.price }}</i></p>
+                    </div>
+                    <div class="col-6"><img class="package-img" src="{{ event.image }}"></div>
+                {% endfor %}
+            </div>
         </div>
-        {% comment %} <div>
-            <img class="picnic" src="{% static "images/picnic.jpg" %}" alt="chic picnic">
-            <img class="birthday" src="{% static "images/birthday.png" %}" alt="birthday party">
-            <img class="bach-party" src="{% static "images/bach_party.jpg" %}" alt="bachelorette picnic">
-        </div> {% endcomment %}
     </main>
 {% endblock content %}
 
